CSS fix for roll damages being too big

--- a/FVTT-module/beyond20/beyond20.css
+++ b/FVTT-module/beyond20/beyond20.css
@@ -9,11 +9,8 @@
 
 /* Styling for Roll Damage Result Rows, applies to single-damage attacks and spells */
 .beyond20-roll-damage {
-    font-size: 1.2em;
-    font-weight: bold;
     border-radius: 3px;
-    line-height: 24px;
-    text-align: center;
+    line-height: 1.5em;
     margin-bottom: 3px;
     box-shadow: rgb(255, 255, 255) 0px 0px 2px inset;
     background: rgba(0, 0, 0, 0.1);
